--- a/nginx-html-configmap.yaml
+++ b/nginx-html-configmap.yaml
@@ -27,7 +27,7 @@ data:
     </html>
   style.css: |
     body {
-      background-color: lightblue;
+      background-color: black;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
