--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:latest
 # Copie os arquivos HTML e CSS para o diretório padrão do Nginx
 COPY index.html /usr/share/nginx/html/
 COPY style.css /usr/share/nginx/html/
-
+COPY foto.png /usr/share/nginx/html/
 # Exponha a porta 80
 EXPOSE 80
 
